[package]
name = "querystrong"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "query-params"
readme = "README.md"
repository = "https://github.com/jbr/querystrong"
documentation = "https://docs.rs/querystrong"
license = "MIT OR Apache-2.0"
keywords = ["queryparams", "querystring", "query-string", "query-params"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
thiserror = "1.0.24"
