[package]
name = "querystrong"
version = "0.4.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
description = "query-params"
readme = "README.md"
repository = "https://github.com/jbr/querystrong"
documentation = "https://docs.rs/querystrong"
license = "MIT OR Apache-2.0"
keywords = ["queryparams", "querystring", "query-string", "query-params"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
memchr = "2.8.0"
serde = { version = "1.0.228", optional = true }
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0.149"
